Added contributors from original DiscordBot

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   ],
   "contributors": [
     "Alex Chaldyshev",
+    "Johnny Dickinson",
+    "Devlix"
   ],
   "author": "Remco S. Jongschaap (SteamingMutt@users.noreply.github.com)",
   "repository": {
