--- a/package.json
+++ b/package.json
@@ -5,15 +5,10 @@
   "readme": "README.md",
   "maintainers": [
   ],
-  "contributors": [
-    "Alex Chaldyshev",
-    "Johnny Dickinson",
-    "Devlix"
-  ],
-  "author": "Remco S. Jongschaap (SteamingMutt@users.noreply.github.com)",
+  "author": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SteamingMutt/DougleyBot.git"
+    "url": "git+https://github.com/chalda/DiscordBot.git"
   },
   "license": "GNU",
   "dependencies": {
@@ -25,6 +20,7 @@
     , "sinon": "1.14.x"
     , "nock": "1.7.x"
     , "cleverbot-node": "0.2.x"
+    , "wolfram": "0.3.x"
     , "tumblr.js": "0.0.x"
     , "youtube-node": "1.2.x"
     , "google": "1.1.x"
