--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chalda/DiscordBot.git"
+    "url": "git+https://github.com/SteamingMutt/DougleyBot.git"
   },
   "license": "GNU",
   "dependencies": {
