--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "request": ">=2.58.0",
     "querystring": "*"
     , "underscore": "1.8.x"
+    , "pmx": "*"
     , "winston": "1.0.x"
     , "sinon": "1.14.x"
     , "nock": "1.7.x"
