--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "DiscordBot",
-  "version": "0.1.1",
+  "name": "DougleyBot",
+  "version": "1.1.5",
   "description": "Bot for Discord app",
   "readme": "README.md",
   "maintainers": [],
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/SteamingMutt/DougleyBot.git"
   },
-  "license": "GNU",
+  "license": "GPL-2.0",
   "dependencies": {
     "cleverbot-node": "0.2.x",
     "discord.js": "*",
