!stroke feature added
Adds a !stroke feature and adds xml2js as a dependency to prepare for
xml feed parsing (r34)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DougleyBot",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Bot for Discord app",
   "readme": "README.md",
   "maintainers": [],
@@ -27,6 +27,7 @@
     "underscore": "1.8.x",
     "wikijs": "*",
     "winston": "1.0.x",
+    "xml2js": "*",
     "yahoo-finance": "*",
     "youtube-node": "1.2.x"
   },
