--- a/auth.json.example
+++ b/auth.json.example
@@ -4,5 +4,6 @@
 	"youtube_api_key": "create one here https://console.developers.google.com",
 	"imgflip_username": "https://imgflip.com/ username",
 	"imgflip_password": "https://imgflip.com/ password",
-	"wolfram_api_key": "go here and click sign up http://products.wolframalpha.com/api/"
+	"wolfram_api_key": "go here and click sign up http://products.wolframalpha.com/api/",
+	"myapifilms_token": "http://api.myapifilms.com/requestToken.do"
 }
