--- a/auth.json.example
+++ b/auth.json.example
@@ -5,5 +5,6 @@
 	"imgflip_username": "https://imgflip.com/ username",
 	"imgflip_password": "https://imgflip.com/ password",
 	"wolfram_api_key": "go here and click sign up http://products.wolframalpha.com/api/",
-	"myapifilms_token": "http://api.myapifilms.com/requestToken.do"
+	"myapifilms_token": "http://api.myapifilms.com/requestToken.do",
+	"steam_api_key": "http://steamcommunity.com/dev/apikey"
 }
