--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ discord_bot_experimental.js
 discord_bot_production.js
 auth.json
 alias.json
+
+# Folders with UGC should not be uploaded
+images
+music
+logs
