--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# UGC
+config.json
+music
+images
+
 # Runtime data
 pids
 *.pid
@@ -19,25 +29,56 @@ coverage
 build/Release
 
 # Dependency directory
-# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+# https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
-build
 
-# Auth file shouldn't be checked in!
-config.json
+# =========================
+# Operating System Files
+# =========================
 
-# Other runtime config files
-rss.json
+# OSX
+# =========================
 
-# Files not ment for this git
-discord_bot_experimental.js
-*.coffee
-discord_bot_production.js
-auth.json
-alias.json
-*.tern-project
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Folders with UGC should not be uploaded
-images
-music
-logs
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+# =========================
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
