--- a/config.json.example
+++ b/config.json.example
@@ -1,17 +1,26 @@
 {
-    "discord_email" : "E-mail address from the bot's Discord account",
-    "discord_password" : "Password from the bot's Discord account",
-    "youtube_api_key": "Create one here: https://console.developers.google.com",
+    "email" : "E-mail address from the bot's Discord account",
+    "password" : "Password from the bot's Discord account",
     "imgflip_username": "Imgflip username",
     "imgflip_password": "Imgflip password",
-    "wolfram_api_key": "Optional, not currently needed",
-    "myapifilms_token": "http://api.myapifilms.com/requestToken.do",
-    "steam_api_key": "http://steamcommunity.com/dev/apikey",
-    "google_custom_search": "https://github.com/SteamingMutt/DougleyBot/wiki/CSE",
-    "command_prefix": "Enter a symbol you want to use as the command prefix",
+    "cmd_prefix": "~",
     "log_chat": false,
-    "join_servers_on_startup": "Enter a instant-invite here that you want the bot to join on start-up",
-    "admin_ids": ["108125505714139136", "107904023901777920", "110147170740494336"],
+    "youtube_api_key": "Create one here: https://console.developers.google.com",
+    "google_custom_search": "https://github.com/SteamingMutt/DougleyBot/wiki/CSE",
+    "permissions": {
+        "masterUser": "Master user Discord ID",
+        "level1": "Global level 1 user Discord ID",
+        "level2": "Global level 2 user Discord ID",
+        "level3": "Global level 3 user Discord ID"
+    },
+    "join_on_launch" : [
+        "https://discord.gg/0cFoiR5QVh4agupi",
+        "https://discord.gg/0cFoiR5QVh57Spqg"
+    ],
+    "redis" : {
+        "host" : "localhost",
+        "port" : 6379
+    },
     "image_folder": "./images",
     "music_folder": "./music"
 }
