--- a/package.json
+++ b/package.json
@@ -1,37 +1,26 @@
 {
   "name": "DougleyBot",
-  "version": "1.3.7",
-  "description": "Bot for Discord app",
+  "version": "2.0.0",
+  "description": "A Discord bot",
   "readme": "README.md",
-  "maintainers": [],
-  "author": "",
+  "maintainers": ["Perpetucake"],
+  "author": "Remco Jongschaap (SteamingMutt@users.noreply.github.com)",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SteamingMutt/DougleyBot.git"
+    "url": "git+https://github.com/SteamingMutt/DougleyBot2.0.git"
   },
-  "license": "GPL-2.0",
+  "license": "GPL-3.0",
   "dependencies": {
+    "discord.js": "^5.0.0",
+    "winston": "^1.1.1",
     "cleverbot-node": "0.2.x",
-    "csgo-market": "*",
-    "discord.js": "*",
-    "feedparser": "*",
-    "google": "1.1.x",
-    "google-images": "0.1.x",
-    "html-to-text": "*",
-    "imgflipper": "*",
-    "nock": "1.7.x",
-    "pmx": "^0.5.5",
+    "request": "^2.61.0",
+    "ws": "^0.8.0",
     "xml2js": "*",
-    "querystring": "*",
-    "request": ">=2.58.0",
-    "sinon": "1.14.x",
-    "steamidconvert": "*",
-    "tumblr.js": "0.0.x",
-    "underscore": "1.8.x",
-    "wikijs": "*",
-    "winston": "1.0.x",
-    "yahoo-finance": "*",
-    "youtube-node": "1.2.x"
+    "imgflipper": "*",
+    "csgo-market": "*",
+    "youtube-node": "1.2.x",
+    "redis": "*"
   },
-  "main": "discord_bot.js"
+  "main": "DougBot.js"
 }
